# lebrqapp

./: .easignore  .env.example  .gitignore  ARCHITECTURE_DIAGRAM.md  CONNECT_GODADDY_DOMAIN_TO_NETLIFY.md  CONTEST_SYSTEM_SQL_QUERIES.sql  CPANEL_TO_NETLIFY_MIGRATION.md  DELIVERY_SUMMARY.md  DEPLOYMENT_CONFIG.md  EXPO_WEB_EXPORT_FIX.md  FINAL_DEPLOYMENT_STEPS.md  GIT_PUSH_TO_GITHUB.md  GIT_SETUP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_EXAMPLE.tsx  MYSQL_ADD_HOURS_USED_COLUMN.sql  MYSQL_DEPLOYMENT_MIGRATION.sql  NETLIFY_BACKEND_CONFIG.md  NETLIFY_COMPLETE_SUMMARY.md  NETLIFY_DEPLOYMENT.md  NETLIFY_DEPLOYMENT_CHECKLIST.md  NETLIFY_DOCS_INDEX.md  NETLIFY_ENV_SETUP.md  NETLIFY_IMPLEMENTATION_COMPLETE.md  NETLIFY_QUICK_REFERENCE.md  NETLIFY_SETUP_SUMMARY.md  PAYMENT_ERROR_HANDLING_IMPROVEMENTS.md  PRODUCTION_WEB_REWRITES.md  README_CONFIG_SYSTEM.md  TESTING_GUIDE.md  TEST_NOTIFICATION_SYSTEM.tsx  UPLOAD_DIST_TO_NETLIFY.md  VERIFICATION_CHECKLIST.md  _redirects  app.config.ts  app.json  babel.config.js  eas.json  jspdf-ambient.d.ts  metro.config.js  (+7 more)
backend/: .env  .env.example  .htaccess  API_404_FIX_CLOUDRUN.md  BACKGROUND_TASKS_FIX.md  BUILD_VERSION  CHANGE_PASSWORD_SSL_FIX.md  CLOUD_RUN_DEPLOYMENT.md  CODE_PATTERNS_MYSQL_TO_POSTGRES.md  COMPLETE_FIX_SUMMARY.md  CONFIG_QUICK_REFERENCE.md  CPANEL_MIGRATION_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOY_CPANEL.md  Dockerfile  EVENT_TICKETING_REFACTORING.md  EXACT_CODE_CHANGES.md  FINAL_SUMMARY.md  FORGOT_PASSWORD_AND_REGISTER_FIXES.md  INDEX.md  LAST_34H_TABLE_UPDATES.sql  LAZY_ROUTER_IMPLEMENTATION.md  MEMORY_ERROR_FIXES.md  (+250 more)
(+323 files in other folders)
